--- a/PierreBakery/Views/Flavors/Index.cshtml
+++ b/PierreBakery/Views/Flavors/Index.cshtml
@@ -1,8 +1,9 @@
 @{
-  Layout = "_Layout";
+    Layout = "_Layout";
 }
 
 @using PierreBakery.Models;
+@using System.Security.Claims
 @using Microsoft.AspNetCore.Mvc.Rendering;
 @model List<PierreBakery.Models.Flavor>;
 
@@ -19,4 +20,9 @@ else
 @foreach(Flavor flavor in Model)
 {
     <li>@Html.ActionLink($"{flavor.Type}", "Details", new { id = flavor.FlavorId })</li>
+}
+
+@if (User.Identity.IsAuthenticated)
+{
+    <p>@Html.ActionLink("Add new Flavor", "Create")</p>
 }
