--- a/PierreBakery/Views/Flavors/Details.cshtml
+++ b/PierreBakery/Views/Flavors/Details.cshtml
@@ -15,7 +15,7 @@
 }
 else
 {
-    <h4>Current Treats with this flavor:</h4>
+    <h4>Treats available in this flavor:</h4>
     <ul>
     @foreach(var join in Model.JoinEntries)
     {
