--- a/PierreBakery/Views/Home/Index.cshtml
+++ b/PierreBakery/Views/Home/Index.cshtml
@@ -16,7 +16,7 @@
                 <li>@Html.ActionLink($"{flavor.Type}", "Details", "Flavors", new { id = flavor.FlavorId })</li>
             }
             <p>We currently have @Model["flavor"].Count flavor(s).</p>
-            <p>@Html.ActionLink("Check availible Flavors", "Index", "Flavors")</p>
+            <p>@Html.ActionLink("Check available Flavors", "Index", "Flavors")</p>
         </div>
         <div class="col-md-6">
             <h3>List of current Treats:</h3>
@@ -26,7 +26,7 @@
                 <li>@Html.ActionLink($"{treat.Name}", "Details", "Treats", new { id = treat.TreatId })</li>
             }
             <p>We currently have @Model["treat"].Count treat(s).</p>
-            <p>@Html.ActionLink("Check availible Treats", "Index", "Treats")</p>
+            <p>@Html.ActionLink("Check available Treats", "Index", "Treats")</p>
         </div>
     </div>
 </div>
