--- a/PierreBakery/Views/Flavors/Index.cshtml
+++ b/PierreBakery/Views/Flavors/Index.cshtml
@@ -26,3 +26,4 @@ else
 {
     <p>@Html.ActionLink("Add new Flavor", "Create")</p>
 }
+<button onclick="window.history.back()"><span class="glyphicon glyphicon-backward" aria-hidden="true"></span> Back</button>
