--- a/PierreBakery/Views/Flavors/Delete.cshtml
+++ b/PierreBakery/Views/Flavors/Delete.cshtml
@@ -12,3 +12,4 @@
     <input type="submit" value="Delete" />
 }
 @Html.ActionLink("Back to Flavors", "Index")
+<button onclick="window.history.back()"><span class="glyphicon glyphicon-backward" aria-hidden="true"></span> Back</button>
