--- a/PierreBakery/Views/Treats/AddFlavor.cshtml
+++ b/PierreBakery/Views/Treats/AddFlavor.cshtml
@@ -19,3 +19,4 @@
 }
 
 <p>@Html.ActionLink("Back to Treats", "Index")</p>
+<button onclick="window.history.back()"><span class="glyphicon glyphicon-backward" aria-hidden="true"></span> Back</button>
