--- a/PierreBakery/Views/Treats/Edit.cshtml
+++ b/PierreBakery/Views/Treats/Edit.cshtml
@@ -22,3 +22,4 @@
 }
 
 <p>@Html.ActionLink("Back to list", "Index")</p>
+<button onclick="window.history.back()"><span class="glyphicon glyphicon-backward" aria-hidden="true"></span> Back</button>
