--- a/PierreBakery/Views/Account/Index.cshtml
+++ b/PierreBakery/Views/Account/Index.cshtml
@@ -4,16 +4,18 @@
 
 <h2>Authentication with Identity</h2>
 <hr />
-@if (User.Identity.IsAuthenticated)
-{
-    <p>Welcome @User.Identity.Name!</p>
-    @using (Html.BeginForm("LogOff", "Account"))
+<div class="login">
+    @if (User.Identity.IsAuthenticated)
     {
-        <input type="submit" class="btn btn-default" value="Log out" />
+        <p>Welcome @User.Identity.Name!</p>
+        @using (Html.BeginForm("LogOff", "Account"))
+        {
+            <input type="submit" class="btn btn-default" value="Log out" />
+        }
     }
-}
-else
-{
-    <p>@Html.ActionLink("Register", "Register")</p>
-    <p>@Html.ActionLink("Log in", "Login")</p>
-}
+    else
+    {
+        <p>@Html.ActionLink("Register", "Register")</p>
+        <p>@Html.ActionLink("Log in", "Login")</p>
+    }
+</div>
