--- a/PierreBakery/Views/Account/Login.cshtml
+++ b/PierreBakery/Views/Account/Login.cshtml
@@ -8,13 +8,15 @@
 
 <h2>Log in with your account</h2>
 <hr />
-@using (Html.BeginForm())
-{
-    @Html.LabelFor(m => m.Email)
-    @Html.TextBoxFor(m => m.Email)
+<div class="login">
+    @using (Html.BeginForm())
+    {
+        @Html.LabelFor(m => m.Email)
+        @Html.TextBoxFor(m => m.Email)
 
-    @Html.LabelFor(m => m.Password)
-    @Html.PasswordFor(m => m.Password)
+        @Html.LabelFor(m => m.Password)
+        @Html.PasswordFor(m => m.Password)
 
-    <input type="submit" value="Log in" class="btn btn-default" />
-}
+        <input type="submit" value="Log in" class="btn btn-default" />
+    }
+</div>
