--- a/PierreBakery/Views/Shared/_Layout.cshtml
+++ b/PierreBakery/Views/Shared/_Layout.cshtml
@@ -11,11 +11,11 @@
             <div class="container-fluid">
                 <ul class="nav navbar-nav">
                     <button type="button" class="btn btn-dark">
-                        <span class="glyphicon glyphicon-home" aria-hidden="true"></span><li>@Html.ActionLink("Home", "Index", "Home")</li>
+                        <span class="glyphicon glyphicon-home" aria-hidden="true"></span><li class="navButton">@Html.ActionLink("Home", "Index", "Home")</li>
                     </button>
                     
                     <button type="button" class="btn btn-dark">
-                        <span class="glyphicon glyphicon-user" aria-hidden="true"></span><li>@Html.ActionLink("Login", "Index", "Account")</li>
+                        <span class="glyphicon glyphicon-user" aria-hidden="true"></span><li class="navButton">@Html.ActionLink("Login", "Index", "Account")</li>
                     </button>
                 </ul>
             </div>
